--- a/WebApplicatio/WebApplicatio.csproj
+++ b/WebApplicatio/WebApplicatio.csproj
@@ -129,6 +129,7 @@
     <Content Include="js\smoothscroll.js" />
     <Content Include="js\wow.min.js" />
     <Content Include="output.aspx" />
+    <Content Include="shuwen.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
     <Content Include="WebForm2.aspx" />
@@ -154,6 +155,13 @@
       <DependentUpon>output.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="shuwen.aspx.cs">
+      <DependentUpon>shuwen.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="shuwen.aspx.designer.cs">
+      <DependentUpon>shuwen.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
