shuwen commit third times again

--- a/WebApplication1/WebApplication1.vbproj
+++ b/WebApplication1/WebApplication1.vbproj
@@ -179,6 +179,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="shuwen3.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
@@ -227,6 +228,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="shuwen3.aspx.designer.vb">
+      <DependentUpon>shuwen3.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="shuwen3.aspx.vb">
+      <DependentUpon>shuwen3.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Site.Master.designer.vb">
       <DependentUpon>Site.Master</DependentUpon>
