--- a/WebApplication1/WebApplication1.vbproj
+++ b/WebApplication1/WebApplication1.vbproj
@@ -180,6 +180,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="shuwen3.aspx" />
+    <Content Include="shuwen4.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
@@ -234,6 +235,13 @@
     </Compile>
     <Compile Include="shuwen3.aspx.vb">
       <DependentUpon>shuwen3.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="shuwen4.aspx.designer.vb">
+      <DependentUpon>shuwen4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="shuwen4.aspx.vb">
+      <DependentUpon>shuwen4.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Site.Master.designer.vb">
